--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "backend"
     ],
     "require": {
-        "bolt/bolt": ">=2.0.0,<3.0.0"
+        "bolt/bolt": "^3.0"
     },
     "license": "MIT",
     "authors": [
